src/objects/ffr__ObjectToObjectMapFieldLink__c.object
<CustomObject>
    <description>Defines how two fields map to each other</description>
    <fields>
        <fullName>ffr__DisplayOrder__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>ffr__Filter__c</referenceTo>
        <relationshipLabel>ObjectToObjectMapFieldLinks</relationshipLabel>
        <relationshipName>ObjectToObjectMapFieldLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__FromField__c</fullName>
        <description>The field to map from</description>
        <label>FromField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ObjectToObjectMap__c</fullName>
        <description>Parent Map</description>
        <label>ObjectToObjectMap</label>
        <referenceTo>ffr__ObjectToObjectMap__c</referenceTo>
        <relationshipLabel>ObjectToObjectMapFieldLinks</relationshipLabel>
        <relationshipName>ObjectToObjectMapFieldLinks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__ToField__c</fullName>
        <description>The field to map to</description>
        <label>ToField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ObjectToObjectMapFieldLink</label>
    <nameField>
        <displayFormat>OTOMFL-{000000}</displayFormat>
        <label>ObjectToObjectMapFieldLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ObjectToObjectMapFieldLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>